multiple changes fix: correct thresholdHome and thresholdAbout calculation feat: customize scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,15 @@
     @apply hidden;
   }
 
+  /* Scrollbar */
+  ::-webkit-scrollbar {
+    @apply w-2;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply bg-gradient-to-b from-theme-1 to-theme-3;
+  }
+
   body {
     @apply bg-light dark:bg-dark text-dark dark:text-light;
   }
